Fix the problem that flex-wrap is applied to close button and timer individually

--- a/src/components/main/frame.module.css
+++ b/src/components/main/frame.module.css
@@ -1,3 +1,7 @@
+.container {
+    display: flex;
+}
+
 .wrapping {
     display: flex;
     flex-direction: column;
